[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "acb"
version = "0.31.22"
description = "ACB: Asynchronous Component Base"
readme = "README.md"
authors = [
    { name = "lesleslie", email = "les@wedgwoodwebworks.com" },
]
requires-python = ">=3.13,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aioconsole>=0.8.2",
    "anyio>=4.12.0",
    "attrs>=25.4.0",
    "bevy>=3.1.0b12",
    "blake3>=1.0.8",
    "brotli>=1.2.0",
    "devtools>=0.12.2",
    "dill>=0.3.9,<0.4.dev0",
    "google-api-python-client>=2.187.0",
    "google-crc32c>=1.7.1",
    "icecream>=2.1.8",
    "inflection>=0.5.1",
    "loguru>=0.7.3",
    "msgspec[toml,yaml]",
    "nest-asyncio>=1.6.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyfiglet>=1.0.4",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utils>=0.42.0",
    "sqlmodel>=0.0.27",
    "toml>=0.10.2",
    "tomli-w>=1.2.0",
    "uuid-utils>=0.12.0",
    "uvicorn>=0.38.0",
    "fastmcp>=2.13.2",
    "mcp-common>=0.3.3",
    "urllib3>=2.6.1",
]

[project.license]
text = "BSD-3-CLAUSE"

[project.urls]
Documentation = "https://github.com/lesleslie/acb"
Homepage = "https://github.com/lesleslie/acb"
Repository = "https://github.com/lesleslie/acb"

[dependency-groups]
dev = [
    "complexipy>=5.1.0",
    "crackerjack>=0.45.2",
    "excalidraw-mcp>=0.34.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pyyaml>=6.0.3",
    "refurb>=2.2.0",
    "ruff>=0.14.8",
    "session-buddy>=0.10.0",
    "types-croniter>=6.0.0.20250809",
]
cache = [
    "aiocache[redis]>=0.12.3",
    "coredis>=5.3.0",
    "logfire[redis]>=4.16.0",
]
dns = [
    "boto3>=1.41.5",
    "google-cloud-dns>=0.36.0",
    "python-cloudflare>=1.0.1",
    "validators>=0.35.0",
]
ftpd = [
    "aioftp>=0.27.2",
    "asyncssh>=2.21.1",
]
monitoring = [
    "logfire[system-metrics]>=4.16.0",
    "sentry-sdk[loguru]>=3.0.0a7",
]
requests = [
    "httpx[http2]>=0.28.1",
    "logfire[httpx]>=4.16.0",
    "niquests>=3.15.2",
    "sentry-sdk[httpx]>=3.0.0a7",
]
secret = [
    "azure-identity>=1.26.0b1",
    "azure-keyvault-secrets>=4.10.0",
    "cloudflare>=4.3.1",
    "google-cloud-secret-manager>=2.25.0",
    "infisicalsdk>=1.0.13",
]
smtp = [
    "mailgun>=1.5.0",
]
storage = [
    "adlfs>=2025.8.0",
    "fsspec>=2025.12.0",
    "gcsfs>=2025.12.0",
    "s3fs>=2025.12.0",
]
templates = [
    "jinja2>=3.1.6",
    "jinja2-async-environment>=0.18.6",
]
sql = [
    "aiomysql>=0.3.2",
    "aiosqlite>=0.21.0",
    "babel>=2.17.0",
    "duckdb>=1.5.0.dev103",
    "duckdb-engine>=0.17.0",
    "greenlet>=3.3.0",
    "logfire[sqlalchemy]>=4.16.0",
    "pymysql>=1.1.2",
    "sentry-sdk[sqlalchemy]>=3.0.0a7",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-libsql>=0.2.0",
    "sqlalchemy-utils>=0.42.0",
    "sqlmodel>=0.0.27",
]
nosql = [
    "beanie>=2.0.1",
    "google-cloud-firestore>=2.21.0",
    "motor>=3.7.1",
]
vector = [
    "duckdb>=1.5.0.dev103",
    "pinecone-client>=6.0.0",
    "qdrant-client>=1.16.1",
    "weaviate-client>=4.18.3",
]
graph = [
    "boto3>=1.41.5",
    "duckdb>=1.5.0.dev103",
    "duckdb-engine>=0.17.0",
    "neo4j>=6.0.3",
    "py2neo>=2021.2.4",
    "python-arango>=8.2.3",
]
ai = [
    "aiohttp>=3.13.2",
    "anthropic>=0.75.0",
    "boto3>=1.41.5",
    "google-cloud-aiplatform>=1.130.0",
    "httpx[http2]>=0.28.1",
    "ollama>=0.6.1",
    "onnx>=1.14; python_version<'3.13'",
    "onnxruntime>=1.23.2; python_version<'3.13'",
    "openai>=2.9.0",
    "psutil>=7.1.3",
    "torch>=2; python_version<'3.13'",
    "transformers>=5.0.0rc0",
]
embedding = [
    "numpy>=2.4.0rc1",
    "onnx>=1.14; python_version<'3.13'",
    "onnxruntime>=1.23.2; python_version<'3.13'",
    "openai>=2.9.0",
    "sentence-transformers>=2; python_version<'3.13'",
    "torch>=2; python_version<'3.13'",
    "transformers>=5.0.0rc0",
]
reasoning = [
    "langchain>=1.1.3; python_version<'3.13'",
    "langchain-community>=0.0.20; python_version<'3.13'",
    "langchain-openai>=1.1.1; python_version<'3.13'",
    "llama-index>=0.9; python_version<'3.13'",
    "llama-index-llms-openai>=0.1; python_version<'3.13'",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "tiktoken>=0.12.0",
]
models = [
    "attrs>=25.4.0",
    "msgspec>=0.20.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
]
logger = [
    "logly>=0.1.6",
    "structlog>=25.5.0",
    "zstandard>=0.25.0",
]
mcp = [
    "fastmcp>=2.13.2",
]
demo = [
    "faker>=38.2.0",
]
queue-apscheduler = [
    "apscheduler>=4.0.0a6",
]
queue-apscheduler-sql = [
    "apscheduler>=4.0.0a6",
    "sqlalchemy>=2.0.45",
]
queue-apscheduler-mongodb = [
    "apscheduler>=4.0.0a6",
    "pymongo>=4.16.0.dev0",
]
queue-apscheduler-redis = [
    "apscheduler>=4.0.0a6",
    "redis>=7.1.0",
]
minimal = [
    "aiocache[redis]>=0.12.3",
    "coredis>=5.3.0",
    "logfire[redis]>=4.16.0",
    "httpx[http2]>=0.28.1",
    "logfire[httpx]>=4.16.0",
    "niquests>=3.15.2",
    "sentry-sdk[httpx]>=3.0.0a7",
]
api = [
    "aiocache[redis]>=0.12.3",
    "coredis>=5.3.0",
    "logfire[redis]>=4.16.0",
    "beanie>=2.0.1",
    "google-cloud-firestore>=2.21.0",
    "motor>=3.7.1",
    "httpx[http2]>=0.28.1",
    "logfire[httpx]>=4.16.0",
    "niquests>=3.15.2",
    "sentry-sdk[httpx]>=3.0.0a7",
    "logfire[system-metrics]>=4.16.0",
    "sentry-sdk[loguru]>=3.0.0a7",
    "azure-identity>=1.26.0b1",
    "azure-keyvault-secrets>=4.10.0",
    "cloudflare>=4.3.1",
    "google-cloud-secret-manager>=2.25.0",
    "infisicalsdk>=1.0.13",
]
microservice = [
    "aiocache[redis]>=0.12.3",
    "coredis>=5.3.0",
    "logfire[redis]>=4.16.0",
    "httpx[http2]>=0.28.1",
    "logfire[httpx]>=4.16.0",
    "niquests>=3.15.2",
    "sentry-sdk[httpx]>=3.0.0a7",
    "logfire[system-metrics]>=4.16.0",
    "sentry-sdk[loguru]>=3.0.0a7",
    "azure-identity>=1.26.0b1",
    "azure-keyvault-secrets>=4.10.0",
    "cloudflare>=4.3.1",
    "google-cloud-secret-manager>=2.25.0",
    "infisicalsdk>=1.0.13",
]
webapp = [
    "aiocache[redis]>=0.12.3",
    "coredis>=5.3.0",
    "logfire[redis]>=4.16.0",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.21.0",
    "babel>=2.17.0",
    "greenlet>=3.3.0",
    "logfire[sqlalchemy]>=4.16.0",
    "pymysql>=1.1.2",
    "sentry-sdk[sqlalchemy]>=3.0.0a7",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-libsql>=0.2.0",
    "sqlalchemy-utils>=0.42.0",
    "sqlmodel>=0.0.27",
    "adlfs>=2025.8.0",
    "fsspec>=2025.12.0",
    "gcsfs>=2025.12.0",
    "s3fs>=2025.12.0",
    "httpx[http2]>=0.28.1",
    "logfire[httpx]>=4.16.0",
    "niquests>=3.15.2",
    "sentry-sdk[httpx]>=3.0.0a7",
    "logfire[system-metrics]>=4.16.0",
    "sentry-sdk[loguru]>=3.0.0a7",
]
webapp-plus = [
    "aiocache[redis]>=0.12.3",
    "coredis>=5.3.0",
    "logfire[redis]>=4.16.0",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.21.0",
    "babel>=2.17.0",
    "greenlet>=3.3.0",
    "logfire[sqlalchemy]>=4.16.0",
    "pymysql>=1.1.2",
    "sentry-sdk[sqlalchemy]>=3.0.0a7",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-libsql>=0.2.0",
    "sqlalchemy-utils>=0.42.0",
    "sqlmodel>=0.0.27",
    "adlfs>=2025.8.0",
    "fsspec>=2025.12.0",
    "gcsfs>=2025.12.0",
    "s3fs>=2025.12.0",
    "httpx[http2]>=0.28.1",
    "logfire[httpx]>=4.16.0",
    "niquests>=3.15.2",
    "sentry-sdk[httpx]>=3.0.0a7",
    "logfire[system-metrics]>=4.16.0",
    "sentry-sdk[loguru]>=3.0.0a7",
    "duckdb>=1.5.0.dev103",
    "pinecone-client>=6.0.0",
    "qdrant-client>=1.16.1",
    "weaviate-client>=4.18.3",
]
cloud-native = [
    "aiocache[redis]>=0.12.3",
    "coredis>=5.3.0",
    "logfire[redis]>=4.16.0",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.21.0",
    "babel>=2.17.0",
    "greenlet>=3.3.0",
    "logfire[sqlalchemy]>=4.16.0",
    "pymysql>=1.1.2",
    "sentry-sdk[sqlalchemy]>=3.0.0a7",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-libsql>=0.2.0",
    "sqlalchemy-utils>=0.42.0",
    "sqlmodel>=0.0.27",
    "adlfs>=2025.8.0",
    "fsspec>=2025.12.0",
    "gcsfs>=2025.12.0",
    "s3fs>=2025.12.0",
    "azure-identity>=1.26.0b1",
    "azure-keyvault-secrets>=4.10.0",
    "cloudflare>=4.3.1",
    "google-cloud-secret-manager>=2.25.0",
    "infisicalsdk>=1.0.13",
    "logfire[system-metrics]>=4.16.0",
    "sentry-sdk[loguru]>=3.0.0a7",
    "boto3>=1.41.5",
    "google-cloud-dns>=0.36.0",
    "python-cloudflare>=1.0.1",
    "validators>=0.35.0",
]
dataplatform = [
    "aiomysql>=0.3.2",
    "aiosqlite>=0.21.0",
    "babel>=2.17.0",
    "greenlet>=3.3.0",
    "logfire[sqlalchemy]>=4.16.0",
    "pymysql>=1.1.2",
    "sentry-sdk[sqlalchemy]>=3.0.0a7",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-libsql>=0.2.0",
    "sqlalchemy-utils>=0.42.0",
    "sqlmodel>=0.0.27",
    "beanie>=2.0.1",
    "google-cloud-firestore>=2.21.0",
    "motor>=3.7.1",
    "adlfs>=2025.8.0",
    "fsspec>=2025.12.0",
    "gcsfs>=2025.12.0",
    "s3fs>=2025.12.0",
    "logfire[system-metrics]>=4.16.0",
    "sentry-sdk[loguru]>=3.0.0a7",
]
gcp = [
    "boto3>=1.41.5",
    "google-cloud-dns>=0.36.0",
    "python-cloudflare>=1.0.1",
    "validators>=0.35.0",
    "azure-identity>=1.26.0b1",
    "azure-keyvault-secrets>=4.10.0",
    "cloudflare>=4.3.1",
    "google-cloud-secret-manager>=2.25.0",
    "infisicalsdk>=1.0.13",
    "beanie>=2.0.1",
    "google-cloud-firestore>=2.21.0",
    "motor>=3.7.1",
    "adlfs>=2025.8.0",
    "fsspec>=2025.12.0",
    "gcsfs>=2025.12.0",
    "s3fs>=2025.12.0",
]
all = [
    "aiohttp>=3.13.2",
    "anthropic>=0.75.0",
    "boto3>=1.41.5",
    "google-cloud-aiplatform>=1.130.0",
    "httpx[http2]>=0.28.1",
    "ollama>=0.6.1",
    "onnx>=1.14; python_version<'3.13'",
    "onnxruntime>=1.23.2; python_version<'3.13'",
    "openai>=2.9.0",
    "psutil>=7.1.3",
    "torch>=2; python_version<'3.13'",
    "transformers>=5.0.0rc0",
    "aiocache[redis]>=0.12.3",
    "coredis>=5.3.0",
    "logfire[redis]>=4.16.0",
    "google-cloud-dns>=0.36.0",
    "python-cloudflare>=1.0.1",
    "validators>=0.35.0",
    "numpy>=2.4.0rc1",
    "sentence-transformers>=2; python_version<'3.13'",
    "aioftp>=0.27.2",
    "asyncssh>=2.21.1",
    "attrs>=25.4.0",
    "msgspec>=0.20.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
    "logfire[system-metrics]>=4.16.0",
    "sentry-sdk[loguru]>=3.0.0a7",
    "beanie>=2.0.1",
    "google-cloud-firestore>=2.21.0",
    "motor>=3.7.1",
    "langchain>=1.1.3; python_version<'3.13'",
    "langchain-community>=0.0.20; python_version<'3.13'",
    "langchain-openai>=1.1.1; python_version<'3.13'",
    "llama-index>=0.9; python_version<'3.13'",
    "llama-index-llms-openai>=0.1; python_version<'3.13'",
    "pydantic>=2.12.5",
    "tiktoken>=0.12.0",
    "logfire[httpx]>=4.16.0",
    "niquests>=3.15.2",
    "sentry-sdk[httpx]>=3.0.0a7",
    "azure-identity>=1.26.0b1",
    "azure-keyvault-secrets>=4.10.0",
    "cloudflare>=4.3.1",
    "google-cloud-secret-manager>=2.25.0",
    "infisicalsdk>=1.0.13",
    "mailgun>=1.5.0",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.21.0",
    "babel>=2.17.0",
    "greenlet>=3.3.0",
    "logfire[sqlalchemy]>=4.16.0",
    "pymysql>=1.1.2",
    "sentry-sdk[sqlalchemy]>=3.0.0a7",
    "sqlalchemy-libsql>=0.2.0",
    "sqlalchemy-utils>=0.42.0",
    "adlfs>=2025.8.0",
    "fsspec>=2025.12.0",
    "gcsfs>=2025.12.0",
    "s3fs>=2025.12.0",
    "duckdb>=1.5.0.dev103",
    "pinecone-client>=6.0.0",
    "qdrant-client>=1.16.1",
    "weaviate-client>=4.18.3",
    "fastmcp>=2.13.2",
]
reasoning-apscheduler = [
    "apscheduler>=4.0.0a6",
]
reasoning-langchain = [
    "langchain>=1.1.3",
    "langchain-openai>=1.1.1",
]
graph-neptune = [
    "gremlinpython>=4.0.0b1",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    "*_test.py",
    "test_*.py",
    "tests/",
]
fix = true
unsafe-fixes = true
show-fixes = true
output-format = "full"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "C901",
    "D",
    "F",
    "I",
    "UP",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]
fixable = [
    "ALL",
]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["acb"]
known-third-party = ["fastapi", "pydantic", "loguru", "bevy", "asyncio", "contextlib", "typing", "dataclasses", "datetime"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "*/data/*,tests/*,.git/*,.mypy_cache/*,htmlcov/**/*,test_*.py,*_test.py"
quiet-level = 3
ignore-words-list = "crate,uptodate,nd,nin,anull"

[tool.pyproject-fmt]
column_width = 120
indent = 4

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = [
    "test_*.py",
    "*_test.py",
]
testpaths = [
    "tests",
    "acb",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "unit: marks test as a unit test",
    "benchmark: mark test as a benchmark (disables parallel execution)",
    "integration: marks test as an integration test",
    "external: marks test as requiring external service",
    "architecture: marks test as checking architecture patterns",
    "quick: marks test as fast-running",
    "coverage: marks test as providing unique coverage",
    "actions: marks test as testing ACB actions",
    "adapters: marks test as testing ACB adapters",
    "hash: marks test as testing hash actions",
    "compress: marks test as testing compress actions",
    "encode: marks test as testing encode actions",
    "cache: marks test as testing cache adapters",
    "storage: marks test as testing storage adapters",
    "sql: marks test as testing SQL adapters",
    "import_adapter: marks test as testing import_adapter functionality",
]
timeout = "300"
timeout_method = "thread"
addopts = [
    "--cov=acb",
    "--cov-report=term",
    "-ra",  # Show extra test summary
]
filterwarnings = [
    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
]

[tool.pytest.benchmark]
disable_gc = true
warmup = false
warmup_iterations = 0
min_rounds = 1
max_time = 5.0

[tool.coverage.run]
branch = false
source = [
    "acb",
]
data_file = ".coverage"
parallel = false
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/_version.py",
    "*/conftest.py",
    "*/test_*.py",
    "*/_test.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError",
    "def __str__",
    "@abstractmethod",
]
ignore_errors = false

[tool.pyright]
verboseOutput = true
include = [
    "tests",
    "acb",
]
exclude = [
    "scratch",
    "build",
    ".venv",
    "dist",
]
extraPaths = [
    ".venv/lib/python3.13/site-packages/",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportOptionalMemberAccess = "warning"
reportOptionalCall = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = false
reportUnknownArgumentType = "warning"
reportInvalidTypeForm = "warning"
reportUnknownLambdaType = "warning"
reportUnknownParameterType = "warning"
reportPrivateUsage = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnnecessaryComparison = "warning"
reportConstantRedefinition = "warning"
pythonVersion = "3.13"

[tool.creosote]
paths = [
    "acb",
]
deps-file = "pyproject.toml"
exclude-deps = [
    "uvicorn",
    "pre-commit",
    "pytest-mock",
    "nest-asyncio",
    "pytest",
    "google-api-python-client",
    "pyyaml",
    "pyfiglet",
    "pytest-timeout",
    "uv",
    "pytest-cov",
    "pytest-xdist",
    "pytest-asyncio",
    "uuid-utils",
    "pytest-benchmark",
    "inflection",
    "keyring",
    "tomli-w",
    "pyleak",
    "pydantic-settings",
    "attrs",
    "google-crc32c",
    "hatchling",
    "toml",
    "mcp-common",
    "crackerjack",
    "urllib3",
]

[tool.refurb]
enable_all = true
quiet = true
python_version = "3.13"
ignore = [
    "FURB184",
    "FURB120",
]

[tool.bandit]
target = [
    "tests",
    "acb",
]
skips = [
    "B311",
    "B704",
    "B301",
    "B403",
    "B404",
    "B105",
    "B106",
    "B101",
    "B608",
    "B603",
    "B602",
    "B607",
    "B112",  # try-except-continue pattern - intentional for robust iteration
]
exclude_dirs = [
    "tests/",
    "test_*.py",
    "*_test.py",
]

[tool.vulture]
min_confidence = 86
paths = [
    "acb",
]
exclude = [
    "tests/",
    "test_*.py",
    "*_test.py",
]
ignore_names = [
    "cls",
]

[tool.uv]
keyring-provider = "subprocess"
index-url = "https://pypi.org/simple/"
prerelease = "allow"

#[tool.uv.sources.acb]
#workspace = true

[tool.mypy]
python_version = "3.13"
files = [
    "acb",
]
publish-url = "https://upload.pypi.org/legacy/"
check-url = "https://pypi.org/simple/"
prerelease = "allow"

[tool.complexipy]
default_pattern = "**/*.py"
exclude_patterns = [
    "**/tests/**",
    "**/test_*.py",
    "acb/adapters/vector/**",
]
max_complexity = 15
